# picotron-tch

./: .gitignore  Cargo.toml  README.md  run_example.sh
examples/: basic_example.rs
src/: config.rs  lib.rs  model.rs  training.rs  utils.rs
src/parallelism/: context_parallel.rs  data_parallel.rs  mod.rs  pipeline_parallel.rs  tensor_parallel.rs
