[package]
name = "picotron-tch"
version = "0.1.0"
edition = "2021"

[lib]
name = "picotron_tch"
crate-type = ["rlib", "cdylib"]

# PyTorch bindings
[dependencies]
tch = "0.20"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Math and utilities
rand = "0.8"
rand_chacha = "0.3"
num-traits = "0.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Python bindings (optional)
pyo3 = { version = "0.20", optional = true, features = ["extension-module"] }

[features]
default = []
python = ["pyo3"]
